--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,12 @@
          <title>Hello, world!</title>  
        </head>  
        <body>  
-         here is a body  
+         <p>
+          I'm learning HTML -- it's pretty easy so far
+         </p>
+         <hr>
+         <p>
+          This is some random text
+         </p>
        </body>  
      </html>
