--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,12 +5,6 @@
          <title>Hello, world!</title>  
        </head>  
        <body>  
-         <p>
-          I'm learning HTML -- it's pretty easy so far
-         </p>
-         <hr>
-         <p>
-          This is some random text
-         </p>
+         <img src="./html.png" alt="HTML" height="300" width="600">
        </body>  
      </html>
