--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,20 @@
          <title>Hello, world!</title>  
        </head>  
        <body>  
-         <img src="./html.png" alt="HTML" height="300" width="600">
+         <p>
+          The <strong>Pythagorean Theorem</strong>:
+         </p>
+         <p>
+          The Pythagorean Theorem is important because <em> it lets you find the hypoteneuse of a triangle.</em> It's used throughout math.
+         </p>
+         <p>
+          Super is used like this a<sup>2</sup>. It is a very nice text formatting tool.
+         </p>
+         <p>
+          You can use subscript using sub like this: x<sub>1</sub>. It is another text formatting tool.
+         </p>
+         <p>
+          Span is used like <span> this to group blocks of text together</span>.
+         </p>
        </body>  
      </html>
