--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,20 +5,15 @@
          <title>Hello, world!</title>  
        </head>  
        <body>  
-         <p>
-          The <strong>Pythagorean Theorem</strong>:
-         </p>
-         <p>
-          The Pythagorean Theorem is important because <em> it lets you find the hypoteneuse of a triangle.</em> It's used throughout math.
-         </p>
-         <p>
-          Super is used like this a<sup>2</sup>. It is a very nice text formatting tool.
-         </p>
-         <p>
-          You can use subscript using sub like this: x<sub>1</sub>. It is another text formatting tool.
-         </p>
-         <p>
-          Span is used like <span> this to group blocks of text together</span>.
-         </p>
+         <h1>Title</h1>
+         <h2>Summary</h2>
+         <p>Some Text</p>
+         <h2>Examples</h2>
+         <h3>Example 1</h3>
+         <p>Some more text</p>
+         <h3>Example 2</h3>
+         <p>Even more text</p>
+         <h2>See also</h2>
+         <p>The last of the text</p>
        </body>  
      </html>
