--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,15 +5,25 @@
          <title>Hello, world!</title>  
        </head>  
        <body>  
-         <h1>Title</h1>
-         <h2>Summary</h2>
-         <p>Some Text</p>
-         <h2>Examples</h2>
-         <h3>Example 1</h3>
-         <p>Some more text</p>
-         <h3>Example 2</h3>
-         <p>Even more text</p>
-         <h2>See also</h2>
-         <p>The last of the text</p>
+         <ol>
+          <li>first</li>
+          <li>second</li>
+          <li>third</li>
+         </ol>
+         <ul>
+          <li>unordered</li>
+          <li>this</li>
+          <li>is</li>
+         </ul>
+         <dl>
+          <dt>HTML</dt>
+          <dd>
+            Standard markup language for web pages/applications
+          </dd>
+          <dt>Definitions List</dt>
+          <dd>
+            This method is used to group a definition to a word
+          </dd>
+         </dl>
        </body>  
      </html>
