--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,25 +5,27 @@
          <title>Hello, world!</title>  
        </head>  
        <body>  
-         <ol>
-          <li>first</li>
-          <li>second</li>
-          <li>third</li>
-         </ol>
-         <ul>
-          <li>unordered</li>
-          <li>this</li>
-          <li>is</li>
-         </ul>
-         <dl>
-          <dt>HTML</dt>
-          <dd>
-            Standard markup language for web pages/applications
-          </dd>
-          <dt>Definitions List</dt>
-          <dd>
-            This method is used to group a definition to a word
-          </dd>
-         </dl>
+         <table>
+          <tr>
+            <th>Europe</th>
+            <th>Asia</th>
+            <th>Africa</th>
+          </tr>
+          <tr>
+            <td>Ukraine</td>
+            <td>China</td>
+            <td>Egypt</td>
+          </tr>
+          <tr>
+            <td>Poland</td>
+            <td>India</td>
+            <td>Kenya</td>
+          </tr>
+          <tr>
+            <td>Italy</td>
+            <td>Thailand</td>
+            <td>Sudan</td>
+          </tr>
+         </table>
        </body>  
      </html>
