--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,28 +4,37 @@
          <meta charset="utf-8">  
          <title>Hello, world!</title>  
        </head>  
-       <body>  
-         <table>
-          <tr>
-            <th>Europe</th>
-            <th>Asia</th>
-            <th>Africa</th>
-          </tr>
-          <tr>
-            <td>Ukraine</td>
-            <td>China</td>
-            <td>Egypt</td>
-          </tr>
-          <tr>
-            <td>Poland</td>
-            <td>India</td>
-            <td>Kenya</td>
-          </tr>
-          <tr>
-            <td>Italy</td>
-            <td>Thailand</td>
-            <td>Sudan</td>
-          </tr>
-         </table>
-       </body>  
+       <body>
+        <header>
+          <nav>
+            <ul>  
+              <li>Home</li>  
+              <li>About</li>  
+              <li>Contact</li>  
+            </ul>
+          </nav>
+        </header>
+        <main>
+          <article>
+            <section>
+              <h1>Here's a Heading in Section</h1>
+              <p>Here's the paragraph for the heading in section</p>
+            </section>
+            <section>
+              <h1>Here's a second heading in a second section</h1>
+              <p>Here's that paragraph for that second heading</p>
+            </section>
+          </article>
+          <aside>
+            <ul>
+              <li>food 1</li>
+              <li>the cake</li>
+              <li>is a lie</li>
+            </ul>
+          </aside>
+        </main>
+        <footer>
+          <p>Here's a footer and here's a copyright: &copy;2024</p>
+        </footer>
+      </body>
      </html>
