--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,36 +5,8 @@
          <title>Hello, world!</title>  
        </head>  
        <body>
-        <header>
-          <nav>
-            <ul>  
-              <li>Home</li>  
-              <li>About</li>  
-              <li>Contact</li>  
-            </ul>
-          </nav>
-        </header>
-        <main>
-          <article>
-            <section>
-              <h1>Here's a Heading in Section</h1>
-              <p>Here's the paragraph for the heading in section</p>
-            </section>
-            <section>
-              <h1>Here's a second heading in a second section</h1>
-              <p>Here's that paragraph for that second heading</p>
-            </section>
-          </article>
-          <aside>
-            <ul>
-              <li>food 1</li>
-              <li>the cake</li>
-              <li>is a lie</li>
-            </ul>
-          </aside>
-        </main>
-        <footer>
-          <p>Here's a footer and here's a copyright: &copy;2024</p>
-        </footer>
-      </body>
+        <a href="https://github.com/denysdovhan/learnyouhtml">
+          <img src="./html.png">
+        </a>
+       </body>
      </html>
