Completed HTML Course Chapter 3

--- a/HTML/html_ course/01_lesson/index.html
+++ b/HTML/html_ course/01_lesson/index.html
@@ -2,19 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="author" content="Sam Crane">
+        <meta name="description" content="This page contains what I'm learning about HTML">
         <title>
             My First Web Page
         </title>
-        <style>
-            html {
-                font-size: 22px
-            }
-
-            body {
-                background-color: #333;
-                color: whitesmoke;
-            }
-        </style>
+        <link rel="icon" href="../../html.png" type="image/x-icon">
+        <link rel="stylesheet" href="main.css" type="text/css">
     </head>
     <body>
         <h1>
