Completed Chapter 3 of HTML Course

--- a/HTML/html_ course/01_lesson/index.html
+++ b/HTML/html_ course/01_lesson/index.html
@@ -11,11 +11,37 @@
         <link rel="stylesheet" href="main.css" type="text/css">
     </head>
     <body>
-        <h1>
-            Hello World
-        </h1>
-        <p>
-            This is my first webpage
+        <h1>Hello World</h1>
+
+        <hr>
+
+        <h2>I'm ready to learn HTML</h2>
+        <p>This is my first webpage</p>
+
+        <h3>My Schedule</h3>
+        <p>This is how:
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;I learn more about web dev.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;I plan out my schedule.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;I use resources from <abbr title="Mozilla Developer Network">MDN</abbr>
         </p>
+
+        <hr>
+
+        <h2>I'm also planning a vacation</h2>
+        <p>I've been working hard and <em>need</em> a break</p>
+        <p>I live in <abbr title="Massachusetts">MA</abbr> and I want to go to <abbr title="Hawaii">HI</abbr></p>
+
+        <h3>Islands in Hawaii</h3>
+        <p><strong>Maui</strong></p>
+        <address>
+            Lanikai Beach<br>
+            Kailua, HI 96734
+        </address>
+        <!-- TODO: Add more Places -->
+        <h3>Things to do in Hawaii</h3>
+        <p>Scuba Diving</p>
+
+        <hr>
+        &lt; &copy; Sam Crane &gt;
     </body>
 </html>
